# Olox

./: README.md
Colox/: CMakeLists.txt  main.c
Colox/include/bytecode/: chunk.h
Colox/include/compiler/: compiler.h
Colox/include/entities/: object.h  table.h  value.h
Colox/include/memory/: memory.h
Colox/include/scanner/: scanner.h
Colox/include/utils/: common.h  debug.h
Colox/include/virtual-machine/: vm.h
Colox/src/: CMakeLists.txt
Colox/src/bytecode/: CMakeLists.txt  chunk.c
Colox/src/compiler/: CMakeLists.txt  compiler.c
Colox/src/entities/: CMakeLists.txt  object.c  table.c  value.c
Colox/src/memory/: CMakeLists.txt  memory.c
Colox/src/scanner/: CMakeLists.txt  scanner.c
Colox/src/utils/: CMakeLists.txt  debug.c
Colox/src/virtual-machine/: CMakeLists.txt  vm.c
Colox/test_files/: test-1.olx
exceptions/: BreakException.java  Return.java  RuntimeError.java
interpreter/: Environment.java  Interpreter.java  LoxCallable.java  LoxFunction.java  OloxCallable.java  OloxClass.java  OloxFunction.java  OloxInstance.java  Stmt.java
lexical_scanner/: Scanner.java  Token.java  TokenType.java
olox/: ErrorReporter.java  ExitCode.java  Olox.java  Scanner.java  Token.java  TokenType.java
parser/: Expr.java  Parser.java
resolver/: Resolver.java
syntax_tree/: AstPrinter.java  BreakException.java  Environment.java  Expr.java  FunctionType.java  Interpreter.java  LoxCallable.java  LoxFunction.java  Parser.java  Return.java  RpnPrinter.java  RunMode.java  RuntimeError.java  Stmt.java
test-examples/: test-1.lx
test_examples/: test-1.lx  (+1 more)
(+41 files in other folders)
